Overlay for notifications

--- a/mockups/mobile.html
+++ b/mockups/mobile.html
@@ -165,26 +165,46 @@
 	        </ul>
 	    </nav>
 	    <main id="tool">
-            <h1>Welcome to Sakai</h1>
-	    	<p>
-	    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel diam odio. Nulla maximus facilisis urna, sit amet scelerisque justo malesuada vel. Fusce a vestibulum nibh. Donec eget mattis metus, sed posuere ante. Nam a sem in sem pellentesque efficitur. Aenean quis neque venenatis, venenatis turpis ultricies, dapibus libero. Integer turpis orci, malesuada vel ipsum sed, sodales auctor turpis. Aliquam sodales laoreet nibh, quis condimentum nulla dignissim quis. Pellentesque commodo pharetra libero, vel auctor elit. Maecenas ut libero dolor. In ut blandit augue.
-	    	</p>
-	    	<p>
-	    	Morbi condimentum diam non purus elementum porta. Cras imperdiet magna eget sem bibendum, et aliquet sapien fermentum. Donec lobortis id tortor at efficitur. Donec sed molestie nisi. Maecenas dolor risus, aliquet nec ex quis, fringilla ullamcorper metus. Quisque eget magna sed velit placerat efficitur eu rhoncus lectus. Mauris facilisis quis diam sit amet molestie. Sed feugiat iaculis consectetur. Quisque nisi est, gravida et pretium ac, vehicula id sapien. Vestibulum non magna sit amet quam lacinia tempus. Praesent tempus augue eget ipsum dictum, ac ornare orci condimentum.
-	    	</p>
-	    	<p>
-	    	Donec ut risus blandit lectus facilisis faucibus. Etiam luctus eu tortor vitae faucibus. Morbi eget sapien dolor. Nullam ut urna ultrices, ultricies risus at, lobortis quam. Quisque sollicitudin mi ut porta consequat. Sed eleifend ac lacus vel rhoncus. In ullamcorper ultricies elit at pulvinar. Maecenas sit amet ligula lobortis, tristique risus id, feugiat tortor. Phasellus ultrices ullamcorper arcu id condimentum. Donec sollicitudin ante turpis, feugiat aliquam tortor tincidunt et. Phasellus at vestibulum massa, ac varius ex. Fusce hendrerit mollis volutpat. Mauris tristique non turpis quis pretium. Vivamus vestibulum porttitor orci, ut varius purus molestie at. Mauris ultrices quam risus, lacinia interdum turpis volutpat in.
-	    	</p>
-	    	<p>
-	    	Sed aliquet dignissim mi quis molestie. Mauris volutpat mi sit amet fermentum laoreet. Suspendisse ullamcorper quis nibh id fringilla. Sed viverra gravida orci sed semper. Nullam convallis diam et dolor venenatis lobortis. Nullam egestas elit massa, ut feugiat nisl tristique placerat. In hac habitasse platea dictumst. Nam porta vestibulum purus, ut condimentum nunc tempus vel. Cras sagittis ex laoreet, vestibulum purus sed, finibus libero. Pellentesque ut aliquam eros. Vestibulum ut congue turpis, finibus mattis magna. Vivamus sollicitudin blandit eleifend. Donec vel turpis tincidunt, laoreet ipsum quis, molestie purus. Nulla ex felis, ullamcorper in arcu nec, pellentesque ornare erat.
-	    	</p>
-	    	<p>
-	    	Nullam ut mi quis arcu ultricies elementum. Aliquam neque diam, aliquam sit amet leo ac, laoreet ultrices leo. Morbi pellentesque consequat tellus sit amet imperdiet. Nullam sed eleifend ante. Sed quis mi dui. Aenean id arcu massa. Mauris et sapien condimentum, ullamcorper lorem malesuada, varius ipsum. Vivamus placerat libero ante, in rhoncus diam sollicitudin sit amet. Aenean semper dolor id condimentum finibus. Curabitur luctus ornare nulla, sit amet lacinia neque. In non dolor dolor.
-	    	</p>
+            <div class="tool">
+                <header>
+                    <div class="toolbar">
+                        <i class="fa fa-link"></i>
+                        <i class="fa fa-question-circle"></i>
+                    </div>
+                    Welcome!
+                </header>
+                <div class="content">
+                    <h1>Welcome to Sakai</h1>
+        	    	<p>
+        	    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel diam odio. Nulla maximus facilisis urna, sit amet scelerisque justo malesuada vel. Fusce a vestibulum nibh. Donec eget mattis metus, sed posuere ante. Nam a sem in sem pellentesque efficitur. Aenean quis neque venenatis, venenatis turpis ultricies, dapibus libero. Integer turpis orci, malesuada vel ipsum sed, sodales auctor turpis. Aliquam sodales laoreet nibh, quis condimentum nulla dignissim quis. Pellentesque commodo pharetra libero, vel auctor elit. Maecenas ut libero dolor. In ut blandit augue.
+        	    	</p>
+        	    	<p>
+        	    	Morbi condimentum diam non purus elementum porta. Cras imperdiet magna eget sem bibendum, et aliquet sapien fermentum. Donec lobortis id tortor at efficitur. Donec sed molestie nisi. Maecenas dolor risus, aliquet nec ex quis, fringilla ullamcorper metus. Quisque eget magna sed velit placerat efficitur eu rhoncus lectus. Mauris facilisis quis diam sit amet molestie. Sed feugiat iaculis consectetur. Quisque nisi est, gravida et pretium ac, vehicula id sapien. Vestibulum non magna sit amet quam lacinia tempus. Praesent tempus augue eget ipsum dictum, ac ornare orci condimentum.
+        	    	</p>
+        	    	<p>
+        	    	Donec ut risus blandit lectus facilisis faucibus. Etiam luctus eu tortor vitae faucibus. Morbi eget sapien dolor. Nullam ut urna ultrices, ultricies risus at, lobortis quam. Quisque sollicitudin mi ut porta consequat. Sed eleifend ac lacus vel rhoncus. In ullamcorper ultricies elit at pulvinar. Maecenas sit amet ligula lobortis, tristique risus id, feugiat tortor. Phasellus ultrices ullamcorper arcu id condimentum. Donec sollicitudin ante turpis, feugiat aliquam tortor tincidunt et. Phasellus at vestibulum massa, ac varius ex. Fusce hendrerit mollis volutpat. Mauris tristique non turpis quis pretium. Vivamus vestibulum porttitor orci, ut varius purus molestie at. Mauris ultrices quam risus, lacinia interdum turpis volutpat in.
+        	    	</p>
+        	    	<p>
+        	    	Sed aliquet dignissim mi quis molestie. Mauris volutpat mi sit amet fermentum laoreet. Suspendisse ullamcorper quis nibh id fringilla. Sed viverra gravida orci sed semper. Nullam convallis diam et dolor venenatis lobortis. Nullam egestas elit massa, ut feugiat nisl tristique placerat. In hac habitasse platea dictumst. Nam porta vestibulum purus, ut condimentum nunc tempus vel. Cras sagittis ex laoreet, vestibulum purus sed, finibus libero. Pellentesque ut aliquam eros. Vestibulum ut congue turpis, finibus mattis magna. Vivamus sollicitudin blandit eleifend. Donec vel turpis tincidunt, laoreet ipsum quis, molestie purus. Nulla ex felis, ullamcorper in arcu nec, pellentesque ornare erat.
+        	    	</p>
+        	    	<p>
+        	    	Nullam ut mi quis arcu ultricies elementum. Aliquam neque diam, aliquam sit amet leo ac, laoreet ultrices leo. Morbi pellentesque consequat tellus sit amet imperdiet. Nullam sed eleifend ante. Sed quis mi dui. Aenean id arcu massa. Mauris et sapien condimentum, ullamcorper lorem malesuada, varius ipsum. Vivamus placerat libero ante, in rhoncus diam sollicitudin sit amet. Aenean semper dolor id condimentum finibus. Curabitur luctus ornare nulla, sit amet lacinia neque. In non dolor dolor.
+        	    	</p>
+                </div>
+            </div>
 	    </main>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="js/jquery.touchSwipe.min.js"></script>
 		<script src="js/app.js"></script>
         <div id="div_overlay"></div>
+        <div id="overlay_notify">
+            <div class="popup">
+                <h2>Notifications</h2>
+                <ul>
+                    <li>1 message unread from <strong>administration workspace</strong></li>
+                    <li>3 news users registered from <strong>administration workspace</strong></li>
+                </ul>
+            </div>
+        </div>
 	</body>
 </html>
