Mobile version ""complete""

--- a/mockups/mobile.html
+++ b/mockups/mobile.html
@@ -1,6 +1,6 @@
 <html lang="es">
 <head>
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=yes">
 	<meta charset="UTF-8">
 	<title>dev.Mprhs::responsive</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -21,7 +21,10 @@
 				<li><span id="toggler_sites">Sites</span></li>
 				<li><span id="toggler_tools">Tools</span></li>
 			</ul>
-			<div id="avisos">1</div>
+			<div id="chat">
+                <i class="fa fa-lg fa-comments-o"></i>
+            </div>
+            <div id="avisos">1</div>
 		</div>
 		<nav id="sites">
 			<ul class="topnav" id="topnav" role="menubar" aria-label="Los sitios empiezan aquí">
