--- a/tablet.html
+++ b/tablet.html
@@ -2,7 +2,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=no">
 	<meta charset="UTF-8">
-	<title>dev.Mprhs::mobile</title>
+	<title>dev.Mprhs::tablet</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<style>
