--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 </head>
 <body>
 	<h1>Versions</h1>
-	<p><a href="mobile.html">Mobile</a></p>
-	<p><a href="tablet.html">Tablet and desktop</a> and <a href="tablet_um.html">(University of Murcia version)</a></p>
+	<p>
+		<a href="mobile.html">Mobile</a><br />
+		<small><a href="mockups/mobile.html">Without iframe</a></small>
+	</p>
+	<p>
+		<a href="tablet.html">Tablet and desktop</a> and <a href="tablet_um.html">(University of Murcia version)</a><br />
+		<small><a href="mockups/tablet.html">Without iframe</a> and <a href="mockups/tablet_um.html">(University of Murcia version)</a></small>
+	</p>
 </body>
 </html>
