blue buttons with different colors

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 		<a href="tablet.html">Tablet and desktop</a> and <a href="tablet_um.html">(University of Murcia version)</a><br />
 		<small><a href="mockups/tablet.html">Without iframe</a> and <a href="mockups/tablet_um.html">(University of Murcia version)</a></small>
 	</p>
+	<p>
+		<a href="mockups/buttons.html">Buttons</a>
+	</p>
 </body>
 </html>
