selects, radio and checkboxes

--- a/mockups/buttons.html
+++ b/mockups/buttons.html
@@ -8,12 +8,25 @@
 </head>
 	<body>
         <div class="container">
+            <div>
+                <input type="checkbox" name="vehicle" value="Bike">
+                <input type="checkbox" name="vehicle" value="Car" checked><br />
+                <input type="radio" name="vehicle" value="Bike">
+                <input type="radio" name="vehicle" value="Car" checked><br />
+            </div>
     		<div class="osDefault">
                 <p>O.S. Default</p>
                 <button disabled="disabled">Botón</button>
                 <button>Botón</button>
                 <button>Botón</button>
                 <button>Botón</button>
+                <p>
+                    <select name="select">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                    </select>
+                </p>
             </div>
             <div class="navIntraTool">
                 <p>Custom</p>
@@ -21,6 +34,15 @@
                 <button>Botón</button>
                 <button>Botón</button>
                 <button>Botón</button>
+                <p>
+                    <select name="select">
+                        <option>Una prueba de texto tremendamente larga para ver si es que se sale o no se sale</option>
+                        <option>Una prueba de texto tremendamente larga para ver si es que se sale o no se sale</option>
+                        <option>Una prueba de texto tremendamente larga para ver si es que se sale o no se sale</option>
+                        <option>2</option>
+                        <option>3</option>
+                    </select>
+                </p>
             </div>
             <div class="navIntraTool-GM">
                 <p>Custom Button sakai</p>
@@ -46,6 +68,11 @@
                     <button>Botón</button>
                     <button>Botón</button>
                 </div>
+            </div>
+            <div>
+                <a href="#">
+                    Link as a button :)
+                </a>
             </div>
         </div>
 	</body>
